--- a/index.html
+++ b/index.html
@@ -8,13 +8,26 @@
 <body>
     <h1>Jay Chen</h1>
     <hr>
-    <h2>Labs:</h2>
+    <h2>CSC 225 Labs</h2>
     <ul>
         <li><a href = "https://github.com/JMyoi/JMyoi.github.io/blob/main/README.md">Lab 1</a></li>
         <li><a href = "https://jmyoi.github.io/">Lab 2</a></li>
-        <li><a href = " ">Lab3</a></li>
+        <li><a href = " ">Lab 3</a></li>
     </ul>
+    <hr>
     <h3>About Me: </h3>
-    <p>I am a computer Science Student at the CUNY College of Staten Island.</p>
+    <p>I am a computer Science Student at the CUNY College of Staten Island. Currently Taking Computer Architecture, Intro to web dev, Combinatorics and Graph Theory, and Seminar in Computer Science.</p>
+    <h3>Experience:</h3>
+    <p><b>My Lua Health</b> <br>Data Science/Machine Learning Intern, June 2024 – August 2024</p>
+    <P><b>Tools: </b><i>Python, BeautifulSoup, NumPy, Pandas, Scikit-Learn, AWS Lambda, Glide, Zapier </i></P>
+    <ul>
+        <li>Developed a web scraping tool to create a comprehensive database maternal health related event.</li>
+        <li>Curated a consolidated database of authoritative information from sources like ACOG and CDC</li>
+        <li>Researched and implemented various machine learning clustering models for the SQUAD matching feature, ensuring
+            optimal cluster formation.</li>
+        <li>Integrated collaborative filtering techniques to recommend mothers to appropriate squads, improving match quality</li>
+        <li>Developed and integrated AWS Lambda functions with Zapier for running Python code in the Glide app</li>
+    </ul>
+    <img src = "https://i.pinimg.com/736x/3a/8c/d2/3a8cd224614801bd1513ca759a185403.jpg" alt ="banner of pikachu" \>
 </body>
 </html>
