truly finished by adding table

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
         <li>Integrated collaborative filtering techniques to recommend mothers to appropriate squads, improving match quality</li>
         <li>Developed and integrated AWS Lambda functions with Zapier for running Python code in the Glide app</li>
     </ul>
+    <h3>Check out some of my projects!!!</h3>
+    <table>
+        <tr><th>Name</th><th>Link</th></tr>
+        <tr><td>Chitchat</td><td><a href = "https://github.com/JMyoi/chitchat-capstone">Github</a></td></tr>
+        <tr><td>Library Management System</td><td> <a href = "https://github.com/JMyoi/330LibraryManagementSystem_GUI_Version">Github</a></td> </tr>
+        <tr><td>Sorting Algorithm Analysis</td><td> <a href = "https://github.com/JMyoi/Sorting_Algorithm_Analysis">Github</a></td> </tr>
+
+    </table>
+    <hr>
     <img src = "https://i.pinimg.com/736x/3a/8c/d2/3a8cd224614801bd1513ca759a185403.jpg" alt ="banner of pikachu" \>
 </body>
 </html>
