--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href = "https://github.com/JMyoi/JMyoi.github.io/blob/main/README.md">Lab 1</a></li>
         <li><a href = "https://jmyoi.github.io/">Lab 2</a></li>
-        <li><a href = " ">Lab 3</a></li>
+        <li><a href = "https://jmyoi.github.io/Lab3 ">Lab 3</a></li>
     </ul>
     <hr>
     <h3>About Me: </h3>
