--- a/Lab4.html
+++ b/Lab4.html
@@ -3,20 +3,167 @@
 	<script>
         alert("Welcome to the store, Here you can buy anything you can imagine!");
 
-		var name;
+		let name;
 		now = new Date();
 		hour = now.getHours();
 
-		name = window.prompt("Please Enter Your name", "Briano");
+		name = window.prompt("Please Enter Your name");
+        ItemRequested = window.prompt("Enter the Item you would like to buy:");
         let valid = true;
         while(valid){
-            ItemRequested = window.prompt("Enter the Item you would like to buy:");
             ItemAmount = window.prompt("Enter the amount (1-99)");
             if(ItemAmount < 1 || ItemAmount >99){
+                valid = true;
+            }
+            else{
                 valid = false;
+                alert("Please enter a valid amount between 1 and 99");
             }
         }
 
+        let year = Date.getFullYear();
+        let month = Date.getMonth() + 1;
+        let day = Date.getDate();
+        //dd-mm--yyyy
+        let arrivalDate = "";
+
+        //case 1-11 if day + 7 exceeds number of days in the respective month, adjust accordingly
+        //case where month is 12 and day + 7 exceeds number of days in month, adjust accordingly
+        if(month == 1){
+            if((day + 7) >31){
+                newMonth = month + 1;
+                day +=7;
+                newDay = day - 31;
+                arrivalDate = newDay + "/" +newMonth + "/"+ year;
+            }
+            else{
+                arrivalDate = day+7 + "/" + month + "/"+ year; 
+            }
+        }
+        if(month == 2){
+            if((day + 7) >28){
+                newMonth = month + 1;
+                day +=7;
+                newDay = day - 28;
+                arrivalDate = newDay + "/" +newMonth + "/"+ year;
+            }
+            else{
+                arrivalDate = day+7 + "/" + month + "/"+ year; 
+            }
+        }
+        if(month == 3){
+            if((day + 7) >31){
+                newMonth = month + 1;
+                day +=7;
+                newDay = day - 31;
+                arrivalDate = newDay + "/" +newMonth + "/"+ year;
+            }
+            else{
+                arrivalDate = day+7 + "/" + month + "/"+ year; 
+            }
+        }
+        if(month == 4){
+            if((day + 7) >30){
+                newMonth = month + 1;
+                day +=7;
+                newDay = day - 30;
+                arrivalDate = newDay + "/" +newMonth + "/"+ year;
+            }
+            else{
+                arrivalDate = day+7 + "/" + month + "/"+ year; 
+            }
+        }
+        if(month == 5){
+            if((day + 7) >31){
+                newMonth = month + 1;
+                day +=7;
+                newDay = day - 31;
+                arrivalDate = newDay + "/" +newMonth + "/"+ year;
+            }
+            else{
+                arrivalDate = day+7 + "/" + month + "/"+ year; 
+            }
+        }
+        if(month == 6){
+            if((day + 7) >30){
+                newMonth = month + 1;
+                day +=7;
+                newDay = day - 30;
+                arrivalDate = newDay + "/" +newMonth + "/"+ year;
+            }
+            else{
+                arrivalDate = day+7 + "/" + month + "/"+ year; 
+            }
+        }
+        if(month == 7){
+            if((day + 7) >31){
+                newMonth = month + 1;
+                day +=7;
+                newDay = day - 31;
+                arrivalDate = newDay + "/" +newMonth + "/"+ year;
+            }
+            else{
+                arrivalDate = day+7 + "/" + month + "/"+ year; 
+            }
+        }
+        if(month == 8){
+            if((day + 7) >31){
+                newMonth = month + 1;
+                day +=7;
+                newDay = day - 31;
+                arrivalDate = newDay + "/" +newMonth + "/"+ year;
+            }
+            else{
+                arrivalDate = day+7 + "/" + month + "/"+ year; 
+            }
+        }
+        if(month == 9){
+            if((day + 7) >30){
+                newMonth = month + 1;
+                day +=7;
+                newDay = day - 30;
+                arrivalDate = newDay + "/" +newMonth + "/"+ year;
+            }
+            else{
+                arrivalDate = day+7 + "/" + month + "/"+ year; 
+            }
+        }
+        if(month == 10){
+            if((day + 7) >31){
+                newMonth = month + 1;
+                day +=7;
+                newDay = day - 31;
+                arrivalDate = newDay + "/" +newMonth + "/"+ year;
+            }
+            else{
+                arrivalDate = day+7 + "/" + month + "/"+ year; 
+            }
+        }
+        if(month == 11){
+            if((day + 7) >30){
+                newMonth = month + 1;
+                day +=7;
+                newDay = day - 30;
+                arrivalDate = newDay + "/" +newMonth + "/"+ year;
+            }
+            else{
+                arrivalDate = day+7 + "/" + month + "/"+ year; 
+            }
+            
+        }
+        if(month == 12){
+            if((day + 7) >31){
+                newMonth = 1;
+                newYear = year + 1;
+                day +=7;
+                newDay = day - 31;
+                arrivalDate = newDay + "/" +newMonth + "/"+ newYear; 
+            }
+            else{
+                arrivalDate = day+7 + "/" + month + "/"+ year; 
+            }
+        }
+        
 
 		if (hour < 12) {
 			document.write("<h1> Good Morning ")
@@ -25,7 +172,7 @@
 		} else {
 			document.write("<h1> Good Evening ")
 		}
-		document.writeln(name + ", Thank You for ordering " + ItemAmount + " "+ ItemRequested)
+		document.writeln(name + ", Thank You for ordering " + ItemAmount + " "+ ItemRequested + "Arrival Date (DD-MM-YYYY): "+arrivalDate);
 
 	</script>
 </head>
