--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <li><a href = "https://github.com/JMyoi/JMyoi.github.io/blob/main/README.md">Lab 1</a></li>
         <li><a href = "https://jmyoi.github.io/">Lab 2</a></li>
         <li><a href = "https://jmyoi.github.io/Lab3">Lab 3</a></li>
+        <li><a href = "https://jmyoi.github.io/Lab4">Lab 4</a></li>
+
     </ul>
     <hr>
     <h3>About Me: </h3>
