--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <li><a href = "https://jmyoi.github.io/">Lab 2</a></li>
         <li><a href = "https://jmyoi.github.io/Lab3">Lab 3</a></li>
         <li><a href = "https://jmyoi.github.io/Lab4">Lab 4</a></li>
+        <li><a href = "https://jmyoi.github.io/Lab5">Lab 5</a></li>
+        <li><a href = "https://jmyoi.github.io/Lab6">Lab 6</a></li>
+        <li><a href = "https://jmyoi.github.io/numsplorer">Final Project</a></li>
 
     </ul>
     <hr>
