--- a/numsplorer.html
+++ b/numsplorer.html
@@ -15,12 +15,12 @@
                      Numsplorer
                   </a>
               <div class="vr"></div>
-              <a class="navbar-brand  rounded-3 p-2" href="#">
+              <a class="navbar-brand  rounded-3 p-2" href="https://jmyoi.github.io/HundredFacts">
                 <img src="battery-full.svg" class = "img-rounded" alt="Logo" width="70" height="70" >
                 100 Facts
               </a>
               <div class="vr"></div>
-              <a class="navbar-brand  rounded-3 p-2" href="#">
+              <a class="navbar-brand  rounded-3 p-2" href="https://jmyoi.github.io/favorites">
                 <img src="stars.svg" class = "img-rounded" alt="Logo" width="70" height="70" >
                 Favorites
               </a>
@@ -38,7 +38,7 @@
                     </div>
                     <h1 class="display-5 fw-bold text-center">Welcome to Numsplorer</h1> 
                     <p class=" fs-4 text-center">
-                        Every number has a story. From fun trivia to fascinating math and historical facts, explore the hidden meanings behind your favorite numbers. Start discovering now!
+                        Every number has a story. From fun trivia to fascinating math and historical facts, explore the hidden meanings behind your favorite numbers. Start exploring now!
                     </p> 
                 </div> 
                 <!-- fact of the day -->
