--- a/favorites.html
+++ b/favorites.html
@@ -7,10 +7,60 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
-    <h1>hi</h1>
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid ">
+            <a class="navbar-brand  rounded-3 p-2" href="https://jmyoi.github.io/numsplorer">
+                <img src="numsplorerNoName.png" class = "img-rounded" alt="Logo" width="70" height="60" >
+                 Numsplorer
+              </a>
+          <div class="vr"></div>
+          <a class="navbar-brand  rounded-3 p-2" href="https://jmyoi.github.io/HundredFacts">
+            <img src="battery-full.svg" class = "img-rounded" alt="Logo" width="70" height="70" >
+            100 Facts
+          </a>
+          <div class="vr"></div>
+          <a class="navbar-brand  rounded-3 p-2" href="https://jmyoi.github.io/favorites">
+            <img src="stars.svg" class = "img-rounded" alt="Logo" width="70" height="70" >
+            Favorites
+          </a>
+        </div>
+    </nav>
+
+    <div class = "container py-4">
+        <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+            <div class="container-fluid py-5 "> 
+                <h1 class="display-5 fw-bold text-center">My Favorite Facts</h1> 
+            </div> 
+            <div class = "d-flex justify-content-center align-items-center pb-3 row g-3">
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown button
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </div>
+            </div>
+            <div id = "favContainer" class = "d-flex justify-content-center align-items-center pb-3 row g-3">
+                <!-- sample card html -->
+                <!-- <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Type:</h5>
+                      <h6 class="card-subtitle mb-2 text-body-secondary">Value:</h6>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                     
+                    </div>
+                </div> -->
+                 
+            </div>
 
 
 
+        </div>
+    </div>
 
 
     <script src = "scriptsFav.js"></script>
