--- a/numsplorer.html
+++ b/numsplorer.html
@@ -9,16 +9,11 @@
     <body>
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid ">
-                <a class="navbar-brand  rounded-3 p-2" href="https://jmyoi.github.io/numsplorer">
+            <div class="container-fluid mx-5">
+                <a class="navbar-brand rounded-3 p-2 " href="https://jmyoi.github.io/numsplorer">
                     <img src="numsplorerNoName.png" class = "img-rounded" alt="Logo" width="70" height="60" >
                      Numsplorer
                   </a>
-              <div class="vr"></div>
-              <a class="navbar-brand  rounded-3 p-2" href="https://jmyoi.github.io/HundredFacts">
-                <img src="battery-full.svg" class = "img-rounded" alt="Logo" width="70" height="70" >
-                100 Facts
-              </a>
               <div class="vr"></div>
               <a class="navbar-brand  rounded-3 p-2" href="https://jmyoi.github.io/favorites">
                 <img src="stars.svg" class = "img-rounded" alt="Logo" width="70" height="70" >
@@ -88,7 +83,7 @@
                         <h6 class="card-title" id = "factOutput"></h6>
                         <!-- favorite button hidden at first -->
                         <button onClick = "handleFavorite()" class="btn btn-outline-secondary visually-hidden" id = "favBtn"> 
-                            <img src = "star.svg" class = "img-rounded" alt="Logo" width="20" height="20" />
+                            <img src = "star.svg" id = "starIcon"class = "img-rounded" alt="Logo" width="20" height="20" />
                         </button>
                         </div>
                     </div>
