filter not dropping

--- a/favorites.html
+++ b/favorites.html
@@ -39,7 +39,7 @@
                       <li><a class="dropdown-item" onClick = "fiterFavorites('Date')">Date</a></li>
                       <li><a class="dropdown-item" onClick = "fiterFavorites('Year')">Year</a></li>
                       <li><a class="dropdown-item" onClick = "fiterFavorites('Random')">Random</a></li>
-                      <li><a class="dropdown-item" onClick = "loadFavorites()">None</a></li>
+                      <li><a class="dropdown-item" onClick = "loadFavorites()">All</a></li>
                     </ul>
                   </div>
             </div>
