--- a/favorites.html
+++ b/favorites.html
@@ -29,18 +29,34 @@
                 <h1 class="display-5 fw-bold text-center">My Favorite Facts</h1> 
             </div> 
             <div class = "d-flex justify-content-center align-items-center pb-3 row g-3">
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Filter By
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" onClick = "fiterFavorites('Trivia')">Trivia</a></li>
-                      <li><a class="dropdown-item" onClick = "fiterFavorites('Math')">Math</a></li>
-                      <li><a class="dropdown-item" onClick = "fiterFavorites('Date')">Date</a></li>
-                      <li><a class="dropdown-item" onClick = "fiterFavorites('Year')">Year</a></li>
-                      <li><a class="dropdown-item" onClick = "fiterFavorites('Random')">Random</a></li>
-                      <li><a class="dropdown-item" onClick = "loadFavorites()">All</a></li>
-                    </ul>
+                <h4 class = "text-center pb-3">Filter By:</h4>
+                <div class="container text-center pb-4">
+                    <div class="row">
+                      <div class="col">
+                        <button type="button" class="btn btn-secondary" onClick = "fiterFavorites('Trivia')">Trivia</button>
+
+                      </div>
+                      <div class="col">
+                        <button type="button" class="btn btn-secondary" onClick = "fiterFavorites('Math')">Math</button>
+
+                      </div>
+                      <div class="col">
+                        <button type="button" class="btn btn-secondary" onClick = "fiterFavorites('Date')">Date</button>
+
+                      </div>
+                      <div class="col">
+                        <button type="button" class="btn btn-secondary" onClick = "fiterFavorites('Year')">Year</button>
+
+                      </div>
+                      <div class="col">
+                        <button type="button" class="btn btn-secondary" onClick = "fiterFavorites('Random')">Random</button>
+
+                      </div>
+                      <div class="col">
+                        <button type="button" class="btn btn-secondary" onClick = "loadFavorites()">All</button>
+
+                      </div>
+                    </div>
                   </div>
             </div>
             <div id = "favContainer" class = "d-flex justify-content-center align-items-center pb-3 row g-3">
