--- a/favorites.html
+++ b/favorites.html
@@ -33,27 +33,27 @@
                 <div class="container text-center pb-4">
                     <div class="row">
                       <div class="col">
-                        <button type="button" class="btn btn-secondary" onClick = "fiterFavorites('Trivia')">Trivia</button>
+                        <button type="button" class="btn btn-secondary my-2" onClick = "fiterFavorites('Trivia')">Trivia</button>
 
                       </div>
                       <div class="col">
-                        <button type="button" class="btn btn-secondary" onClick = "fiterFavorites('Math')">Math</button>
+                        <button type="button" class="btn btn-secondary my-2" onClick = "fiterFavorites('Math')">Math</button>
 
                       </div>
                       <div class="col">
-                        <button type="button" class="btn btn-secondary" onClick = "fiterFavorites('Date')">Date</button>
+                        <button type="button" class="btn btn-secondary my-2" onClick = "fiterFavorites('Date')">Date</button>
 
                       </div>
                       <div class="col">
-                        <button type="button" class="btn btn-secondary" onClick = "fiterFavorites('Year')">Year</button>
+                        <button type="button" class="btn btn-secondary my-2" onClick = "fiterFavorites('Year')">Year</button>
 
                       </div>
                       <div class="col">
-                        <button type="button" class="btn btn-secondary" onClick = "fiterFavorites('Random')">Random</button>
+                        <button type="button" class="btn btn-secondary my-2" onClick = "fiterFavorites('Random')">Random</button>
 
                       </div>
                       <div class="col">
-                        <button type="button" class="btn btn-secondary" onClick = "loadFavorites()">All</button>
+                        <button type="button" class="btn btn-secondary my-2" onClick = "loadFavorites()">All</button>
 
                       </div>
                     </div>
